--- a/manager-api/routes/templates/correo1evento.ejs
+++ b/manager-api/routes/templates/correo1evento.ejs
@@ -1,9 +1,9 @@
 <p>&nbsp;</p>
 <h3>Estimados:</h3>
 <p>&nbsp;</p>
-<h3>El presente informe notifica el evento registrado con fecha <%=fechaInf%></h3>
+<!-- <h3>El presente informe notifica el evento registrado con fecha <%=fechaInf%></h3> -->
 <p>&nbsp;</p>
-<table border="1" style="border: 1px solid #999; border-collapse: collapse">
+<!-- <table border="1" style="border: 1px solid #999; border-collapse: collapse">
   <tbody>
       <tr>
         <th scope="row" style="font-size:small; border: 1px solid black; font-weight: bold;">HORA</th>
@@ -50,12 +50,12 @@
         <td style="font-size:small; border: 1px solid black"><%=result.atencion%></td>
       </tr>               
   </tbody>
-</table>
+</table> -->
 <br />
 <p>&nbsp;</p>
 <h3>Saludos cordiales, </h3>
 <p></p>
-<h3><%=remitente%></h3>
+<!-- <h3><%=remitente%></h3> -->
 <h4>Soporte BIT</h4>
 <h4>Ingeniería, Canal 13</h4>
 
