--- a/manager-api/routes/templates/correo.ejs
+++ b/manager-api/routes/templates/correo.ejs
@@ -41,6 +41,9 @@
   </p>
 <% } %>
 <br />
+<p> 
+  <a href="http://registro.ingenieriac13.cl/historial1">Click aquí para resolver</a>
+</p>
 <h3 style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Saludos cordiales, </h3>
 <p></p>
 <h4 style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Soporte BIT</h4>
