--- a/manager-api/routes/templates/correo.ejs
+++ b/manager-api/routes/templates/correo.ejs
@@ -14,6 +14,9 @@
   <li>
     <strong style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Programa: <%= datos.detalleeventoOperaciones.produccion.pgmProduccion%></strong>
   </li>
+  <li>
+    <strong style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Estado del Evento: <%= datos.detalleeventoOperaciones.estadoEvento%></strong>
+  </li>
 </ul>
 <% if (datos.incidentes.length > 0) { %>
 <p> 
