--- a/manager-api/routes/templates/correo_modifica.ejs
+++ b/manager-api/routes/templates/correo_modifica.ejs
@@ -15,6 +15,9 @@
     <strong style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Programa: <%= datos.detalleeventoOperaciones.produccion.pgmProduccion%></strong>
   </li>
   <li>
+    <strong style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Estado del Evento: <%= datos.detalleeventoOperaciones.estadoEvento%></strong>
+  </li>
+  <li>
     <strong style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Observación Operación: <%= datos.detalleeventoOperaciones.obsEvento%></strong>
   </li>
   <li>
