correcciones remitente correo

--- a/manager-api/routes/templates/correo_modifica.ejs
+++ b/manager-api/routes/templates/correo_modifica.ejs
@@ -58,5 +58,5 @@
 </p>
 <h3 style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Saludos cordiales, </h3>
 <p></p>
-<h4 style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Soporte BIT</h4>
+<h4 style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Plataforma de Operaciones 13</h4>
 <h4 style="font-family:Helvetica,Arial,sans-serif;font-size:15px;color:#234567">Ingeniería, Canal 13</h4>
