--- a/manager-api/routes/templates/correoNoEvents.ejs
+++ b/manager-api/routes/templates/correoNoEvents.ejs
@@ -6,6 +6,6 @@
 <h3>Saludos cordiales, </h3>
 <p></p>
 <h3><%=remitente%></h3>
-<h4>Soporte BIT</h4>
+<h4>Plataforma de Operaciones 13</h4>
 <h4>Ingeniería, Canal 13</h4>
 
